# ProgLang

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
Cmd/: CMakeLists.txt  Main.cpp
Lang/: CMakeLists.txt
Lang/Lang/: Chunk.cpp  Chunk.h  Compiler.cpp  Compiler.h  EventSystem.cpp  EventSystem.h  Interface.h  Lexer.cpp  Lexer.h  Memory.cpp  Memory.h  Object.cpp  Object.h  OpCodes.h  Package.h  Stack.h  String.cpp  String.h  VM.cpp  VM.cpp~RF24c933c5.TMP  VM.cpp~RF28772325.TMP  VM.h  Value.cpp  Value.h
Lang/Lang/Libraries/: std.cpp  std.h  web.cpp  web.h
Test/: CMakeLists.txt  Main.cpp
TestFiles/: classTest.lang  helloworld.lang  importTest.lang  input.lang  mathsTest.lang  test.json  test.lang
std/: async.lang  data.lang  duration.lang
